--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,10 @@
 on:
   push:
     branches: [main]
-    paths: ['jr94330/Guide/content/Guide.md']
+    paths: ['/content/Guide.md']
   pull_request:
     branches: [main]
-    paths: ['jr94330/Guide/content/Guide.md']
+    paths: ['/content/Guide.md']
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
       - run: |
           curl https://raw.githubusercontent.com/ekalinin/github-markdown-toc/master/gh-md-toc -o gh-md-toc
           chmod a+x gh-md-toc
-          ./gh-md-toc --insert --no-backup jr94330/Guide/content/Guide.md
+          ./gh-md-toc --insert --no-backup /content/Guide.md
           rm -f ./gh-md-toc
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
