--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,10 +2,10 @@
 on:
   push:
     branches: [main]
-    paths: ['/content/Guide.md']
+    paths: ['content/Guide.md']
   pull_request:
     branches: [main]
-    paths: ['/content/Guide.md']
+    paths: ['content/Guide.md']
 
 jobs:
   build:
