--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,3 @@
-           
 on:
   push:
     branches: [main]
@@ -21,3 +20,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Auto update markdown TOC
+          token: ${{ secrets.GITHUB_TOKEN }}
