--- a/.github/workflows/GuideLssue_1.yml
+++ b/.github/workflows/GuideLssue_1.yml
@@ -1,10 +1,10 @@
 on:
   push:
     branches: [main]
-    paths: ['content/Guide.md']
+    paths: ['content/GuideLssue_1.md']
   pull_request:
     branches: [main]
-    paths: ['content/Guide.md']
+    paths: ['content/GuideLssue_1.md']
 
 jobs:
   build:
