--- a/.github/workflows/GuideLssue_1.yml
+++ b/.github/workflows/GuideLssue_1.yml
@@ -15,7 +15,7 @@ jobs:
       - run: |
           curl https://raw.githubusercontent.com/ekalinin/github-markdown-toc/master/gh-md-toc -o gh-md-toc
           chmod a+x gh-md-toc
-          ./gh-md-toc --insert --no-backup content/Guide.md
+          ./gh-md-toc --insert --no-backup content/GuideLssue_1.md
           rm -f ./gh-md-toc
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
